# BEBRA

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: indices_manual.csv
docs/: index.html
src/: app_streamlit.py
src/mmw/: __init__.py  analytics.py  cli.py  config.py  db.py  indices.py  linker.py  news.py  nlp.py  prices.py  report.py  utils.py
tests/: test_analytics.py  test_indices.py  test_news.py  test_prices.py
