[tool.poetry]
name = "maritime-market-watch"
version = "0.1.0"
description = "A tool to monitor maritime market trends, indices, and news"
authors = ["Your Name <your_email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
yfinance = "^0.2.22"
pandas = "^1.5.0"
numpy = "^1.23.0"
plotly = "^5.0.0"
feedparser = "^6.0.8"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"
lxml = "^4.9.1"
SQLAlchemy = "^2.0.0"
aiosqlite = "^0.17.0"
click = "^8.1.3"
python-dateutil = "^2.8.2"
sumy = "^0.8.1"
spacy = "^3.2.0"
