[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maritime-market-watch"
version = "0.1.0"
description = "Monitoring maritime market assets, indices, and news."
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
mmw = "mmw.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
